Tue Oct 10 06:08:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/fuzz.pl:
	  Changed check for empty inline files to also check for empty
	  source files

	* bin/MakeProjectCreator/config/avoids_corba_e_compact.mpb:
	* bin/MakeProjectCreator/config/avoids_corba_e_micro.mpb:
	  New avoids projects

	* etc/ace.doxygen:
	  Expand some more macros, should improve documentatation

	* html/README:
	  Updated download location to ISIS

Tue Oct 10 06:03:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* docs/ACE-bug-process.html:
	  Updated to mention svn

	* docs/Download.html:
	  Commented out the source packages that are not complete at this moment

Mon Oct 09 09:07:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/generate_rel_manpages:
	  Fixed an error in this script and updated the location to which the
	  generated packages should be copied to

Mon Oct 09 09:03:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

	* docs/Download.html:
	  Updated with the new download locations

	* docs/bczar/bczar.html:
	  Updated documentation generation instructions

Thu Oct 05 00:35:37 2006  William R. Otte  wotte@dre.vanderbilt.edu

        * ACE version 5.5.3 released.

Tue Oct  3 16:45:35 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * NEWS
          Updated the NEWS to add the changes for ACE_Hash_MultiMap_Manager
          class and executionmanager_stub and plan_generator base projects.

Tue Oct  3 15:02:14 UTC 2006  Steve Huston  <shuston@riverace.com>

        * NEWS: Described the ACE_Refcounted_Auto_Ptr effects of
          Thu Jul  6 20:45:15 UTC 2006  Steve Huston  <shuston@riverace.com>

Mon Oct  2 12:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Const/bool improvements

Mon Oct  2 11:26:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.{h,cpp}:
          Changed is_set_ conditional values member to bool
