@@ -1,3 +1,9 @@
+Tue Oct 10 12:54:00 UTC 2006  Simon Massey  <sma@prismtech.com>
+
+        * ace/config-win32-msvc.h:
+        Changed the MFC build run-time dll decorators to match
+        the current build system settings.
+
 Tue Oct 10 06:08:12 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* bin/fuzz.pl:
